feat: Set API-Gateway properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=API-Gateway
+
+
+#Eureka Client
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+
+#Mapping to Services
+
+#ProductService-Mapping
+spring.cloud.gateway.routes[0].id=productservice
+spring.cloud.gateway.routes[0].predicates[0]=Path=/products/*
+spring.cloud.gateway.routes[0].uri=lb://productservice
+
+#UserService-Mapping
+spring.cloud.gateway.routes[1].id=userservice
+spring.cloud.gateway.routes[1].predicates[0]=Path=/users/*
+spring.cloud.gateway.routes[1].uri=lb://userservice
